objects/RA_Class_Coach__c.object
<CustomObject>
    <label>Class Coach</label>
    <nameField>
        <displayFormat>1-{000}</displayFormat>
        <label>Class Coach Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Coaches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>class__c</referenceTo>
        <relationshipLabel>Class Coaches</relationshipLabel>
        <relationshipName>Class_Coaches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Class Coaches</relationshipLabel>
        <relationshipName>Class_Coaches</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coach_3__c</fullName>
        <label>Coach 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Coach</fullName>
                </value>
                <value>
                    <fullName>Second Coach</fullName>
                </value>
                <value>
                    <fullName>Third Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>classStatus__c</fullName>
        <formula>IF(  ISPICKVAL(Coach__r.Status__c, &quot;Active&quot;)  , TEXT(Class__r.Status__c),&apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>classStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coach_Number__c</fullName>
        <label>Coach Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Contact_status_must_be_active</fullName>
        <active>true</active>
        <errorConditionFormula>!ISPICKVAL( Coach__r.Status__c , &quot;Active&quot;)</errorConditionFormula>
        <errorMessage>Contact Status must be active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cant_edit_class_coach_once_closed</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Class__r.Status__c, &quot;Closed&quot;)</errorConditionFormula>
        <errorMessage>Cannot add/edit class coaches if class status is closed</errorMessage>
    </validationRules>
</CustomObject>